--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="rcse" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icons\rcse.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="RCS_csharp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\RCS_csharp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
