--- a/ErrorForm.en.resx
+++ b/ErrorForm.en.resx
@@ -117,14 +117,72 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="GPL3" xml:space="preserve">
-    <value />
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>204, 24</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="rcse" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icons\rcse.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="label1.Text" xml:space="preserve">
+    <value>An error has occoured.</value>
   </data>
-  <data name="RCS_csharp" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\RCS_csharp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="buttonOK.Text" xml:space="preserve">
+    <value>OK</value>
+  </data>
+  <data name="buttonSave.Text" xml:space="preserve">
+    <value>Save Report</value>
+  </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAMAEBAQAAEABAAoAQAANgAAABAQAAABAAgAaAUAAF4BAAAQEAAAAQAgAGgEAADGBgAAKAAAABAA
+        AAAgAAAAAQAEAAAAAACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAIAAAACAgACAAAAAgACAAICA
+        AACAgIAAwMDAAAAA/wAA/wAAAP//AP8AAAD/AP8A//8AAP///wAAAAAAD///AAAAAAD3mZfwAAAAD3mZ
+        mX8AAAAPmfj5nwAAAA+Zj4mfAP///5n4+Z8A93d3eZmZfwD3d3eHmZfwAPd3d3///wAA93d3f3d/AAD3
+        d3d/d38AAPd3d393fwAA/////3d/AAAAAPd3d38AAAAA93d3fwAAAAD/////AP+DAAD/AQAA/gAAAP4A
+        AAD+AAAAwAAAAMAAAADAAQAAwAMAAMADAADAAwAAwAMAAMADAAD8AwAA/AMAAPwDAAAoAAAAEAAAACAA
+        AAABAAgAAAAAAAABAAAAAAAAAAAAAAABAAAAAQAAAAAAAEJCQgB6enoAABTlABAj5wBAT+wAUF3tAGx3
+        7ACzs7MAn6f1APb29gD4+PgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////AAAAAAAAAAAAAAsKCgoLAAAAAAAAAAAAAAoH
+        AwMDBwoAAAAAAAAAAAsHBAYDBQMHCwAAAAAAAAAKAwYLCQsFAwoAAAAAAAAACgMDCQsJAwMKAAAKCgoK
+        CgoDBgsJCwUDCgAACgEBAQECBwQGAwUDBwsAAAoBAQEBAQgHAwMDBwoAAAAKAQEBAQEBCgoKCgoAAAAA
+        CgEBAQEBAQoBAQEKAAAAAAoBAQEBAQEKAQEBCgAAAAAKAQEBAQEBCgEBAQoAAAAACgoKCgoKCgoBAQEK
+        AAAAAAAAAAAKAQEBAQEBCgAAAAAAAAAACgEBAQEBAQoAAAAAAAAAAAoKCgoKCgoKAAD/gwAA/wEAAP4A
+        AAD+AAAA/gAAAMAAAADAAAAAwAEAAMADAADAAwAAwAMAAMADAADAAwAA/AMAAPwDAAD8AwAAKAAAABAA
+        AAAgAAAAAQAgAAAAAABABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAPb29q/29vb/9vb2//b29v/29vavAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAPb29u9sd+z/ABTl/wAU5f8AFOX/bHfs//b29u8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAPb29q9sd+z/ECPn/1Bd7f8AFOX/QE/s/wAU5f9sd+z/9vb2rwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD29vb/ABTl/1Bd7f//////n6f1//////9AT+z/ABTl//b29v8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA9vb2/wAU5f8AFOX/n6f1//////+fp/X/ABTl/wAU5f/29vb/AAAAAAAA
+        AAD29vb/9vb2//b29v/29vb/9vb2//b29v8AFOX/UF3t//////+fp/X//////0BP7P8AFOX/9vb2/wAA
+        AAAAAAAA9vb2/0JCQv9CQkL/QkJC/0JCQv96enr/bHfs/xAj5/9QXe3/ABTl/0BP7P8AFOX/bHfs//b2
+        9q8AAAAAAAAAAPb29v9CQkL/QkJC/0JCQv9CQkL/QkJC/7Ozs/9sd+z/ABTl/wAU5f8AFOX/bHfs//b2
+        9u8AAAAAAAAAAAAAAAD29vb/QkJC/0JCQv9CQkL/QkJC/0JCQv9CQkL/9vb2//b29v/29vb/9vb2//b2
+        9v8AAAAAAAAAAAAAAAAAAAAA9vb2/0JCQv9CQkL/QkJC/0JCQv9CQkL/QkJC//b29v9CQkL/QkJC/0JC
+        Qv/29vb/AAAAAAAAAAAAAAAAAAAAAPb29v9CQkL/QkJC/0JCQv9CQkL/QkJC/0JCQv/29vb/QkJC/0JC
+        Qv9CQkL/9vb2/wAAAAAAAAAAAAAAAAAAAAD29vb/QkJC/0JCQv9CQkL/QkJC/0JCQv9CQkL/9vb2/0JC
+        Qv9CQkL/QkJC//b29v8AAAAAAAAAAAAAAAAAAAAA9vb2//b29v/29vb/9vb2//b29v/29vb/9vb2//b2
+        9v9CQkL/QkJC/0JCQv/29vb/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD29vb/QkJC/0JC
+        Qv9CQkL/QkJC/0JCQv9CQkL/9vb2/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA9vb2/0JC
+        Qv9CQkL/QkJC/0JCQv9CQkL/QkJC//b29v8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPb2
+        9v/29vb/9vb2//b29v/29vb/9vb2//b29v/29vb/AAAAAAAAAAD/gwAA/wEAAP4AAAD+AAAA/gAAAMAA
+        AADAAAAAwAEAAMADAADAAwAAwAMAAMADAADAAwAA/AMAAPwDAAD8AwAA
+</value>
+  </data>
+  <data name="$this.Text" xml:space="preserve">
+    <value>Error Occoured</value>
   </data>
 </root>
