--- a/MainFrm.resx
+++ b/MainFrm.resx
@@ -120,11 +120,42 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="menuStrip1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 0</value>
+  </data>
+  <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>1461, 32</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="menuStrip1.TabIndex" type="System.Int32, mscorlib">
+    <value>2</value>
+  </data>
+  <data name="menuStrip1.Text" xml:space="preserve">
+    <value>menuStrip1</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Name" xml:space="preserve">
+    <value>menuStrip1</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.MenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
+  <data name="itemFile.Size" type="System.Drawing.Size, System.Drawing">
+    <value>84, 28</value>
+  </data>
+  <data name="itemFile.Text" xml:space="preserve">
+    <value>文件(&amp;F)</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="itemNew.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
     <value>Ctrl+N</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="itemNew.Size" type="System.Drawing.Size, System.Drawing">
     <value>315, 34</value>
   </data>
@@ -179,12 +210,6 @@
   <data name="itemPrint.Text" xml:space="preserve">
     <value>打印(&amp;P)</value>
   </data>
-  <data name="itemSetting.Size" type="System.Drawing.Size, System.Drawing">
-    <value>315, 34</value>
-  </data>
-  <data name="itemSetting.Text" xml:space="preserve">
-    <value>设置</value>
-  </data>
   <data name="split1.Size" type="System.Drawing.Size, System.Drawing">
     <value>312, 6</value>
   </data>
@@ -194,17 +219,17 @@
   <data name="itemQuit.Text" xml:space="preserve">
     <value>退出(&amp;Q)</value>
   </data>
-  <data name="itemFile.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="itemEdit.Size" type="System.Drawing.Size, System.Drawing">
     <value>84, 28</value>
   </data>
-  <data name="itemFile.Text" xml:space="preserve">
-    <value>文件(&amp;F)</value>
+  <data name="itemEdit.Text" xml:space="preserve">
+    <value>编辑(&amp;E)</value>
   </data>
   <data name="itemCopy.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
     <value>Ctrl+C</value>
   </data>
   <data name="itemCopy.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
+    <value>243, 34</value>
   </data>
   <data name="itemCopy.Text" xml:space="preserve">
     <value>复制(&amp;C)</value>
@@ -213,19 +238,19 @@
     <value>Ctrl+X</value>
   </data>
   <data name="itemCut.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
+    <value>243, 34</value>
   </data>
   <data name="itemCut.Text" xml:space="preserve">
     <value>剪切(&amp;U)</value>
   </data>
   <data name="itemSeperator2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>267, 6</value>
+    <value>240, 6</value>
   </data>
   <data name="itemPaste.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
     <value>Ctrl+V</value>
   </data>
   <data name="itemPaste.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
+    <value>243, 34</value>
   </data>
   <data name="itemPaste.Text" xml:space="preserve">
     <value>粘贴(P)</value>
@@ -234,7 +259,7 @@
     <value>Ctrl+Z</value>
   </data>
   <data name="itemUndo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
+    <value>243, 34</value>
   </data>
   <data name="itemUndo.Text" xml:space="preserve">
     <value>撤销(&amp;N)</value>
@@ -243,7 +268,7 @@
     <value>Ctrl+Y</value>
   </data>
   <data name="itemRedo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
+    <value>243, 34</value>
   </data>
   <data name="itemRedo.Text" xml:space="preserve">
     <value>重做(&amp;R)</value>
@@ -252,140 +277,19 @@
     <value>Ctrl+A</value>
   </data>
   <data name="itemSelectAll.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
+    <value>243, 34</value>
   </data>
   <data name="itemSelectAll.Text" xml:space="preserve">
     <value>全选(&amp;A)</value>
   </data>
   <data name="toolStripMenuItem3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>267, 6</value>
+    <value>240, 6</value>
   </data>
   <data name="toolInsert.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
+    <value>243, 34</value>
   </data>
   <data name="toolInsert.Text" xml:space="preserve">
     <value>插入(&amp;I)</value>
-  </data>
-  <data name="itemSearchWithBing.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
-  </data>
-  <data name="itemSearchWithBing.Text" xml:space="preserve">
-    <value>使用 Bing 搜索...</value>
-  </data>
-  <data name="itemEdit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>84, 28</value>
-  </data>
-  <data name="itemEdit.Text" xml:space="preserve">
-    <value>编辑(&amp;E)</value>
-  </data>
-  <data name="itemOpenInBrowser.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
-  </data>
-  <data name="itemOpenInBrowser.Text" xml:space="preserve">
-    <value>在浏览器中打开...</value>
-  </data>
-  <data name="itemDebug.Size" type="System.Drawing.Size, System.Drawing">
-    <value>88, 28</value>
-  </data>
-  <data name="itemDebug.Text" xml:space="preserve">
-    <value>调试(&amp;D)</value>
-  </data>
-  <data name="itemCSharp.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
-  </data>
-  <data name="itemCSharp.Text" xml:space="preserve">
-    <value>C#</value>
-  </data>
-  <data name="itemHTML.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
-  </data>
-  <data name="itemHTML.Text" xml:space="preserve">
-    <value>HTML</value>
-  </data>
-  <data name="itemXAML.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
-  </data>
-  <data name="itemXAML.Text" xml:space="preserve">
-    <value>XAML</value>
-  </data>
-  <data name="itemVB.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
-  </data>
-  <data name="itemVB.Text" xml:space="preserve">
-    <value>Visual Basic</value>
-  </data>
-  <data name="itemCSeries.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
-  </data>
-  <data name="itemCSeries.Text" xml:space="preserve">
-    <value>C</value>
-  </data>
-  <data name="toolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>267, 6</value>
-  </data>
-  <data name="itemMeetFile.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
-  </data>
-  <data name="itemMeetFile.Text" xml:space="preserve">
-    <value>MeetFile</value>
-  </data>
-  <data name="itemFormat.Size" type="System.Drawing.Size, System.Drawing">
-    <value>89, 28</value>
-  </data>
-  <data name="itemFormat.Text" xml:space="preserve">
-    <value>格式(&amp;O)</value>
-  </data>
-  <data name="itemAbout.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
-  </data>
-  <data name="itemAbout.Text" xml:space="preserve">
-    <value>关于(&amp;A)</value>
-  </data>
-  <data name="toolStripMenuItem2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>267, 6</value>
-  </data>
-  <data name="itemIssues.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
-  </data>
-  <data name="itemIssues.Text" xml:space="preserve">
-    <value>Issues...</value>
-  </data>
-  <data name="itemSysInfo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
-  </data>
-  <data name="itemSysInfo.Text" xml:space="preserve">
-    <value>系统信息...</value>
-  </data>
-  <data name="itemHelp.Size" type="System.Drawing.Size, System.Drawing">
-    <value>88, 28</value>
-  </data>
-  <data name="itemHelp.Text" xml:space="preserve">
-    <value>帮助(&amp;H)</value>
-  </data>
-  <data name="menuStrip1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 0</value>
-  </data>
-  <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1461, 32</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="menuStrip1.TabIndex" type="System.Int32, mscorlib">
-    <value>2</value>
-  </data>
-  <data name="menuStrip1.Text" xml:space="preserve">
-    <value>menuStrip1</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.Name" xml:space="preserve">
-    <value>menuStrip1</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.MenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.ZOrder" xml:space="preserve">
-    <value>3</value>
   </data>
   <data name="itemDateTime.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
     <value>F5</value>
@@ -402,6 +306,78 @@
   <data name="itemInsertLicense.Text" xml:space="preserve">
     <value>插入许可证...</value>
   </data>
+  <data name="itemSearchWithBing.Size" type="System.Drawing.Size, System.Drawing">
+    <value>243, 34</value>
+  </data>
+  <data name="itemSearchWithBing.Text" xml:space="preserve">
+    <value>使用 Bing 搜索...</value>
+  </data>
+  <data name="itemTools.Size" type="System.Drawing.Size, System.Drawing">
+    <value>84, 28</value>
+  </data>
+  <data name="itemTools.Text" xml:space="preserve">
+    <value>工具(&amp;T)</value>
+  </data>
+  <data name="itemSettings.Size" type="System.Drawing.Size, System.Drawing">
+    <value>182, 34</value>
+  </data>
+  <data name="itemSettings.Text" xml:space="preserve">
+    <value>选项(&amp;O)</value>
+  </data>
+  <data name="itemSavePower.Size" type="System.Drawing.Size, System.Drawing">
+    <value>182, 34</value>
+  </data>
+  <data name="itemSavePower.Text" xml:space="preserve">
+    <value>节电模式</value>
+  </data>
+  <data name="itemDebug.Size" type="System.Drawing.Size, System.Drawing">
+    <value>88, 28</value>
+  </data>
+  <data name="itemDebug.Text" xml:space="preserve">
+    <value>调试(&amp;D)</value>
+  </data>
+  <data name="itemOpenInBrowser.Size" type="System.Drawing.Size, System.Drawing">
+    <value>248, 34</value>
+  </data>
+  <data name="itemOpenInBrowser.Text" xml:space="preserve">
+    <value>在浏览器中打开...</value>
+  </data>
+  <data name="itemFormat.Size" type="System.Drawing.Size, System.Drawing">
+    <value>89, 28</value>
+  </data>
+  <data name="itemFormat.Text" xml:space="preserve">
+    <value>格式(&amp;O)</value>
+  </data>
+  <data name="itemCSharp.Size" type="System.Drawing.Size, System.Drawing">
+    <value>209, 34</value>
+  </data>
+  <data name="itemCSharp.Text" xml:space="preserve">
+    <value>C#</value>
+  </data>
+  <data name="itemHTML.Size" type="System.Drawing.Size, System.Drawing">
+    <value>209, 34</value>
+  </data>
+  <data name="itemHTML.Text" xml:space="preserve">
+    <value>HTML</value>
+  </data>
+  <data name="itemXAML.Size" type="System.Drawing.Size, System.Drawing">
+    <value>209, 34</value>
+  </data>
+  <data name="itemXAML.Text" xml:space="preserve">
+    <value>XAML</value>
+  </data>
+  <data name="itemVB.Size" type="System.Drawing.Size, System.Drawing">
+    <value>209, 34</value>
+  </data>
+  <data name="itemVB.Text" xml:space="preserve">
+    <value>Visual Basic</value>
+  </data>
+  <data name="itemCSeries.Size" type="System.Drawing.Size, System.Drawing">
+    <value>209, 34</value>
+  </data>
+  <data name="itemCSeries.Text" xml:space="preserve">
+    <value>C</value>
+  </data>
   <data name="itemPlainC.Size" type="System.Drawing.Size, System.Drawing">
     <value>163, 34</value>
   </data>
@@ -414,9 +390,57 @@
   <data name="itemCPP.Text" xml:space="preserve">
     <value>C++</value>
   </data>
+  <data name="toolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>206, 6</value>
+  </data>
+  <data name="itemMeetFile.Size" type="System.Drawing.Size, System.Drawing">
+    <value>209, 34</value>
+  </data>
+  <data name="itemMeetFile.Text" xml:space="preserve">
+    <value>MeetFile</value>
+  </data>
+  <data name="itemHelp.Size" type="System.Drawing.Size, System.Drawing">
+    <value>88, 28</value>
+  </data>
+  <data name="itemHelp.Text" xml:space="preserve">
+    <value>帮助(&amp;H)</value>
+  </data>
+  <data name="itemAbout.Size" type="System.Drawing.Size, System.Drawing">
+    <value>194, 34</value>
+  </data>
+  <data name="itemAbout.Text" xml:space="preserve">
+    <value>关于(&amp;A)</value>
+  </data>
+  <data name="toolStripMenuItem2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>191, 6</value>
+  </data>
+  <data name="itemIssues.Size" type="System.Drawing.Size, System.Drawing">
+    <value>194, 34</value>
+  </data>
+  <data name="itemIssues.Text" xml:space="preserve">
+    <value>Issues...</value>
+  </data>
+  <data name="itemSysInfo.Size" type="System.Drawing.Size, System.Drawing">
+    <value>194, 34</value>
+  </data>
+  <data name="itemSysInfo.Text" xml:space="preserve">
+    <value>系统信息...</value>
+  </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>137, 17</value>
   </metadata>
+  <data name="tlabelStatus.Size" type="System.Drawing.Size, System.Drawing">
+    <value>46, 24</value>
+  </data>
+  <data name="tlabelStatus.Text" xml:space="preserve">
+    <value>就绪</value>
+  </data>
+  <data name="toolProgress.Size" type="System.Drawing.Size, System.Drawing">
+    <value>100, 23</value>
+  </data>
+  <data name="toolProgress.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
   <data name="statusStrip1.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 759</value>
   </data>
@@ -443,12 +467,6 @@
   </data>
   <data name="&gt;&gt;statusStrip1.ZOrder" xml:space="preserve">
     <value>2</value>
-  </data>
-  <data name="tlabelStatus.Size" type="System.Drawing.Size, System.Drawing">
-    <value>46, 24</value>
-  </data>
-  <data name="tlabelStatus.Text" xml:space="preserve">
-    <value>就绪</value>
   </data>
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>258, 17</value>
@@ -587,6 +605,12 @@
   <data name="&gt;&gt;elementHost1.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <data name="itemOpenFromWeb.Size" type="System.Drawing.Size, System.Drawing">
+    <value>315, 34</value>
+  </data>
+  <data name="itemOpenFromWeb.Text" xml:space="preserve">
+    <value>从网络打开(&amp;R)</value>
+  </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -651,12 +675,6 @@
     <value>itemPrint</value>
   </data>
   <data name="&gt;&gt;itemPrint.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;itemSetting.Name" xml:space="preserve">
-    <value>itemSetting</value>
-  </data>
-  <data name="&gt;&gt;itemSetting.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;split1.Name" xml:space="preserve">
@@ -747,6 +765,24 @@
     <value>itemSearchWithBing</value>
   </data>
   <data name="&gt;&gt;itemSearchWithBing.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;itemTools.Name" xml:space="preserve">
+    <value>itemTools</value>
+  </data>
+  <data name="&gt;&gt;itemTools.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;itemSettings.Name" xml:space="preserve">
+    <value>itemSettings</value>
+  </data>
+  <data name="&gt;&gt;itemSettings.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;itemSavePower.Name" xml:space="preserve">
+    <value>itemSavePower</value>
+  </data>
+  <data name="&gt;&gt;itemSavePower.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;itemDebug.Name" xml:space="preserve">
@@ -886,6 +922,18 @@
   </data>
   <data name="&gt;&gt;toolCompile.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;itemOpenFromWeb.Name" xml:space="preserve">
+    <value>itemOpenFromWeb</value>
+  </data>
+  <data name="&gt;&gt;itemOpenFromWeb.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;toolProgress.Name" xml:space="preserve">
+    <value>toolProgress</value>
+  </data>
+  <data name="&gt;&gt;toolProgress.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripProgressBar, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>MainFrm</value>
