--- a/LocalizedRes/MessageBoxes.resx
+++ b/LocalizedRes/MessageBoxes.resx
@@ -117,71 +117,62 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="BtnCompileCSharp" xml:space="preserve">
-    <value>编译 C#</value>
+  <data name="CloseNotSaved" xml:space="preserve">
+    <value>此文件已被更改。\r\n如继续关闭，您将失去正在编辑的内容。是否保存后再关闭？</value>
   </data>
-  <data name="MenuDebug" xml:space="preserve">
-    <value>调试(&amp;D)</value>
+  <data name="CloseWindowsShutdown" xml:space="preserve">
+    <value>请先保存后再关机。</value>
   </data>
-  <data name="MenuEdit" xml:space="preserve">
-    <value>编辑(&amp;E)</value>
+  <data name="CompiledNotFound" xml:space="preserve">
+    <value>编译器未能输出文件。有可能发生错误。</value>
   </data>
-  <data name="MenuFile" xml:space="preserve">
-    <value>文件(&amp;F)</value>
+  <data name="EmptyTextBox" xml:space="preserve">
+    <value>文本为空。请输入一些文本。</value>
   </data>
-  <data name="MenuFormat" xml:space="preserve">
-    <value>格式(&amp;O)</value>
+  <data name="FluentSave" xml:space="preserve">
+    <value>Fluent Design 的设置需要在重启 {nameShort} 后生效。</value>
+    <comment>{nameShort} = programShortName</comment>
   </data>
-  <data name="MenuHelp" xml:space="preserve">
-    <value>帮助(&amp;H)</value>
+  <data name="FluentWarning" xml:space="preserve">
+    <value> 当前正在使用 Fluent Design 中的亚克力特效，在 Windows Forms 中找不到相关文档。\r\n请在 文件 -&gt; 设置中关闭。</value>
   </data>
-  <data name="MIAbout" xml:space="preserve">
-    <value>关于(&amp;A)</value>
+  <data name="InputDownload" xml:space="preserve">
+    <value>请输入网络文件的地址。该文件必须能本地下载（不开启 JS 的浏览器）且为永久链接。</value>
   </data>
-  <data name="MIExit" xml:space="preserve">
-    <value>退出(&amp;Q)</value>
+  <data name="InputDownloadFailed" xml:space="preserve">
+    <value>打开文件失败。</value>
   </data>
-  <data name="MINew" xml:space="preserve">
-    <value>新建(&amp;N)</value>
+  <data name="InputDownloadTitle" xml:space="preserve">
+    <value>从网络打开</value>
   </data>
-  <data name="MIOpen" xml:space="preserve">
-    <value>打开(&amp;P)</value>
+  <data name="NotImplemented" xml:space="preserve">
+    <value>尚未实现</value>
   </data>
-  <data name="MIOpenInBrowser" xml:space="preserve">
-    <value>在浏览器中打开...</value>
+  <data name="NotMarkup" xml:space="preserve">
+    <value>试图使用浏览器打开的文件不是 HTML 或 XML 文件。\r\n如果确实是上述文件，请将其后缀名变为对应的后缀名。</value>
   </data>
-  <data name="MIPrint" xml:space="preserve">
-    <value>打印(&amp;P)</value>
+  <data name="PowerSavingON" xml:space="preserve">
+    <value>节电模式已开启。部分功能会被禁用。</value>
   </data>
-  <data name="MISave" xml:space="preserve">
-    <value>保存(&amp;S)</value>
+  <data name="PowerSavingPrint" xml:space="preserve">
+    <value>在节电模式下不可以打印文件。</value>
   </data>
-  <data name="MISaveTo" xml:space="preserve">
-    <value>另存为(&amp;A)</value>
+  <data name="PrintNotSaved" xml:space="preserve">
+    <value>您必须先保存文件至少一次。</value>
   </data>
-  <data name="MISettings" xml:space="preserve">
-    <value>设置</value>
+  <data name="SaveAsBoxTitle" xml:space="preserve">
+    <value>另存为</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="SimpleEditor_License" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SimpleEditor-License.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;gb2312</value>
+  <data name="StatusDownload" xml:space="preserve">
+    <value>从 Web 下载文件</value>
   </data>
-  <data name="TabDebug" xml:space="preserve">
-    <value>调试</value>
-  </data>
-  <data name="TabToolbox" xml:space="preserve">
-    <value>工具箱</value>
-  </data>
-  <data name="TILicense" xml:space="preserve">
-    <value>许可证</value>
-  </data>
-  <data name="ToolbarReady" xml:space="preserve">
+  <data name="StatusReady" xml:space="preserve">
     <value>就绪</value>
   </data>
-  <data name="ToolRun" xml:space="preserve">
-    <value>运行</value>
+  <data name="TitleError" xml:space="preserve">
+    <value>错误</value>
   </data>
-  <data name="ToolSave" xml:space="preserve">
-    <value>保存</value>
+  <data name="TitleWarning" xml:space="preserve">
+    <value>警告</value>
   </data>
 </root>
